Remove --add-opens for javafx