@@ -10,4 +10,3 @@
 --add-opens=java.desktop/sun.awt=ALL-UNNAMED
 --add-opens=java.base/java.io=ALL-UNNAMED
 --add-opens=java.base/java.time=ALL-UNNAMED
---add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
